syntax = "proto3";
// run in main directory project
//option go_package = "package/pb";
//protoc --proto_path=api/example --go_out=pkg/api --go-grpc_out=pkg/api simple.proto
option go_package = "v1/pb";

message Item {
    string id = 1;
    string name = 2;
    optional string description = 3;
}

message PaginationMeta {
    int32 nextCursor = 1;
    optional int32 lastCursor = 2;
    bool hasNext = 3;
    bool hasPrevious = 4;
}

message FilterItems {
    optional string name = 1;
    optional string description = 2;
}

message GetItemsResponse {
    repeated Item data = 1;
    PaginationMeta meta = 2;
}

message GetItemsRequest {
    uint32 skip = 1;
    uint32 limitPage = 2;
}

message StoreItemResponse {
    Item item = 1;
}

message StoreItemRequest {
    string name = 1;
    optional string description = 2;
}

message UpdateItemResponse {
    Item item = 1;
}

message UpdateItemRequest {
    string id = 1;
    optional string name = 2;
    optional string description = 3;
}

message DeletetemResponse {
    string id = 1;
}

message DeleteItemRequest {
    string id = 1;
}

message GetItemResponse {
    Item data = 1;
}

message GetItemRequest {
    string id = 1;
}


service ItemService {
    rpc StoreItem(StoreItemRequest) returns (StoreItemResponse);
    rpc GetItems (GetItemsRequest) returns (GetItemsResponse);
    rpc GetItem (GetItemRequest) returns (GetItemResponse);
    rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse);
    rpc DeleteItem (DeleteItemRequest) returns (DeletetemResponse);
}
